grafana-ingress-example.yaml
---
# Source: logging/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: logging
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: logging-0.1.0
    app: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    -
      http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  name: http
